feat: store message-level event history in turn metadata

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ LANGFUSE_USER_ID=opencode-user
 # OPENCODE_LANGFUSE_DEBUG=true
 # OPENCODE_LANGFUSE_LOG_LEVEL=INFO
 # OPENCODE_LANGFUSE_MAX_CHARS=20000
+# OPENCODE_LANGFUSE_MAX_MESSAGE_EVENTS_PER_MESSAGE=30
